--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>01</li>
+                <li><a href="lesson02/design-principles.html">Design Principles</a></li>
                 <li>02</li>
                 <a>a</a>                
             </ul>
