--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dev Karatapu - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development, Dev Karatapu, course assignment portal">
     <meta name="author" content="Dev karatapu">
-    <link rel="stylesheet" type="text/css" href="styles/base.css">
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
     <header>
@@ -15,8 +15,9 @@
     </header>
 
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
+            <button id="menu" class=""></button>
+            <ul class="navigation">
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="chamber/siteplan.html">Site Plan</a></li>
                 <li><a href="chamber/">Chamber</a></li>
                 <li><a href="https://www.byui.edu" target="_blank">BYU-Idaho</a></li>
