"Completed Hambarger Menu"

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         <img src="images/profile-image.jpg" alt="Dev Karatapu">
         <h1>Dev Karatapu</h1>
     </header>
-
+       <a id="menu" href="#" title="Home" class="active">Home</a>
         <nav>
-            <button id="menu" class=""></button>
             <ul class="navigation">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="chamber/siteplan.html">Site Plan</a></li>
                 <li><a href="chamber/">Chamber</a></li>
                 <li><a href="https://www.byui.edu" target="_blank">BYU-Idaho</a></li>
