--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav>
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
-                <li><a href="chamber/siteplan.html">Site Plan</a></li>
-                <li><a href="chamber/">Chamber</a></li>
+                <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+                <li><a href="lesson03/chamber.html">Chamber</a></li>
                 <li><a href="https://www.byui.edu" target="_blank">BYU-Idaho</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">Scripture</a></li>
             </ul>
