--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Your HTML Page</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
 <body>
 <h1>📖 Book of Mormon - Top 10</h1>
