--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<sytle src="styles/style.css"></sytle>
+	<title>BOM</title>
 </head>
 <body>
 <h1>📖 Book of Mormon - Top 10</h1>
