"Fixed the meta name and description"

--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<sytle src="styles/style.css"></sytle>
-	<title>BOM</title>
+	<meta name="description" content="Book of Mormon add and remove chapter list">
+	<meta name="author" content="Dev Karatapu">
+	<link rel="stylesheet" href="styles/style.css">
+	<title>Book of Mormon - Top 10</title>
 </head>
 <body>
 <h1>📖 Book of Mormon - Top 10</h1>
