"Meta viewport added back"

--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Book of Mormon add and remove chapter list">
+	<meta name="description" content="Book of Mormon - Top 10">
 	<meta name="author" content="Dev Karatapu">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles/style.css">
 	<title>Book of Mormon - Top 10</title>
 </head>
