--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Book of Mormon - Top 10">
 	<meta name="author" content="Dev Karatapu">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="style.css">
 	<title>Book of Mormon - Top 10</title>
 	
 </head>
@@ -18,6 +18,6 @@
 	<button type="submit">Add Chapter</button>
 	<ul id="list"></ul>
 </main>
-<script src="/scripts/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
