--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href="lesson02/design-principles.html">Design Principles</a></li>
-                <li>02</li>
-                <a>a</a>                
+                <li>Lesson 01: <a href="lesson01/holygrail.html">Holy Grail</a></li>
+                <li>Lesson 02: <a href="lesson02/design-principles.html">Design Principles</a></li>
+                <li>Lesson 03: <a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
+                <li>Lesson 04: <a href="lesson04/">?</a></li>
+                <li>Lesson 05: <a href="lesson05/bom.html">Book of Mormon Favorite Scripture</a></li>
+                <li>Lesson 06: <a href="lesson06/design-principles.html">Design Principles</a></li>
+                <li>Lesson 07: <a href="lesson07/design-principles.html">Design Principles</a></li>
+                <li>Lesson 08: <a href="lesson08/design-principles.html">Design Principles</a></li>
+                <li>Lesson 09: <a href="lesson09/design-principles.html">Design Principles</a></li>
+                <li>Lesson 10: <a href="lesson010/design-principles.html">Design Principles</a></li>
+                <li>Lesson 11: <a href="lesson011/design-principles.html">Design Principles</a></li>
+                <li>Lesson 11: <a href="lesson02/design-principles.html">Design Principles</a></li>              
             </ul>
         </section>
 
