Chamber push new changes

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -81,7 +81,7 @@
                 <h4>Today</h4>
                 <h4><span id="current-temp"></span> </h4>
                 <figure>
-                    <img id="weather-icon" src="" alt="Weather Icon">
+                    <img id="weather-icon" src="https://openweathermap.org/img/w/04n.png" alt="Weather Icon">
                     <figcaption id="fig1" class="weather-fig-captions"></figcaption>
                     </figure>
             </div>
@@ -91,7 +91,7 @@
                     <h4><span id="forecast-day-1"></span> </h4>
                     <h4><span id="forecast-temp-1"></span> </h4>
                     <figure>
-                        <img id="weather-icon1" src="" class="w-icon" alt="weather icon">
+                        <img id="weather-icon1" src="https://openweathermap.org/img/w/13n.png" class="w-icon" alt="weather icon">
                         <figcaption id="fig2" class="weather-fig-captions"></figcaption>
                     </figure>
                 </div>
@@ -99,7 +99,7 @@
                     <h4><span id="forecast-day-2"></span> </h4>
                     <h4><span id="forecast-temp-2"></span> </h4>
                     <figure>
-                        <img id="weather-icon2" src="" class="w-icon" alt="Weather Icon">
+                        <img id="weather-icon2" src="https://openweathermap.org/img/w/13n.png" class="w-icon" alt="Weather Icon">
                         <figcaption id="fig3" class="weather-fig-captions"></figcaption>
                     </figure>
                 </div>
@@ -107,7 +107,7 @@
                     <h4><span id="forecast-day-3"></span> </h4>
                     <h4><span id="forecast-temp-3"></span> </h4>
                     <figure>
-                        <img id="weather-icon3" src="" class="w-icon" alt="Weather Icon">
+                        <img id="weather-icon3" href="https://openweathermap.org/img/w/13n.png" class="w-icon" alt="Weather Icon">
                         <figcaption id="fig4" class="weather-fig-captions"></figcaption>
                     </figure>
                 </div>
@@ -136,7 +136,7 @@
     </main>
     <footer>
         <div id="contact-info">
-            <img id="footer-img" src="images/Chamber-logo.png" loading="lazy" alt="Monterrey Logo">
+            <img id="footer-img" src="images/Chamber-logo.png" loading="lazy" alt="Logo">
             <h2>Chamber of Commerce</h2>
             <h4>Rexburg Main Street, Idaho</h4>
             <h4>contactus@chamber.com</h4>
