--- a/chamber/index.html
+++ b/chamber/index.html
@@ -2,6 +2,11 @@
 <html lang="en-US">
 
 <head>
+    <meta property="og:title" content="Rexburg Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image"
+        content="https://github.com/Dev-Karatapu/wdd230/blob/main/chamber/images/chamber.png">
+    <meta property="og:url" content="https://dev-karatapu.github.io/wdd230/chamber/index.html">
     <meta name="author" content="Dev Karatapu">
     <meta name="description"
         content="Chamber of Commerce">
