"responsive-image.html" fixed

--- a/lesson06/responsive-images.html
+++ b/lesson06/responsive-images.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <meta property="og:title" content="Favorite temples">
+    <meta property="og:type" content="website">
+    <meta property="og:image"
+        content="https://github.com/Dev-Karatapu/wdd230/blob/main/lesson06/images/slctemple7.jpg">
+    <meta property="og:url" content="https://dev-karatapu.github.io/wdd230/lesson06/responsive-images.html">
+    <meta name="author" content="Dev Karatapu">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Favorite Temple</title>
