--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <div id="logo">
-            <img class="header-logo" id="img-header" src="images/logo.png" alt="Logo">
+            <img class="header-logo" id="img-header" src="images/logo.webp" alt="Logo">
         </div>
 
         <div id="mode">
@@ -141,17 +141,17 @@
     </main>
     <footer>
         <div id="contact-info">
-            <img id="footer-img" src="images/Chamber-logo.png" loading="lazy" alt="Logo">
+            <img id="footer-img" src="images/Chamber-logo.webp" loading="lazy" alt="Logo">
             <h2>Chamber of Commerce</h2>
             <h4>Rexburg Main Street, Idaho</h4>
             <h4>contactus@chamber.com</h4>
             <h4>(208)123-4567</h4>
 
         </div>
-        <!-- <div class="google-map">
-            <iframe src="https://www.google.com/maps/d/embed?mid=1E8qK0WBDaouvZkskttkeqZDQtG0&hl=en_US&ehbc=2E312F" width="640" height="480"></iframe>
+        <div class="google-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46051.894752068925!2d-111.7881829!3d43.83005045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53540a4b807a98b1%3A0x4a49d8d1d2181c73!2sRexburg%2C%20ID!5e0!3m2!1sen!2sus!4v1702532272330!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div id="dev-info"> -->
+        <div id="dev-info">
             <hr>
             <p>&copy; 2023 Chamber of Commerce</p>
             <p>Dev Karatapu</p>
