Discover final push

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -83,23 +83,23 @@
                 <h1>Rexburg Gallery</h1>
             </div>
             <div>
-                <img class="discover-img" src="https://example.com/rexburg-view.jpg" loading="lazy" alt="View of Rexburg">
+                <img class="discover-img" src="images/View-of-Rexburg.webp" loading="lazy" alt="View of Rexburg">
                 <figcaption>View of Rexburg City</figcaption>
             </div>
             <div>
-                <img class="discover-img" src="https://example.com/byuidaho-campus.jpg" loading="lazy" alt="BYU-Idaho Campus">
+                <img class="discover-img" src="images/BYU-Idaho.webp" loading="lazy" alt="BYU-Idaho Campus">
                 <figcaption>Brigham Young University-Idaho Campus</figcaption>
             </div>
             <div>
-                <img class="discover-img" src="https://example.com/teton-river-rexburg.jpg" loading="lazy" alt="Teton River">
+                <img class="discover-img" src="images/Teton-River.webp" loading="lazy" alt="Teton River">
                 <figcaption>Scenic Teton River in Rexburg</figcaption>
             </div>
             <div>
-                <img class="discover-img" src="https://example.com/nature-trails-rexburg.jpg" loading="lazy" alt="Nature Trails">
+                <img class="discover-img" src="images/Nature-Trails.webp" loading="lazy" alt="Nature Trails">
                 <figcaption>Picturesque Nature Trails in Rexburg</figcaption>
             </div>
             <div>
-                <img class="discover-img" src="https://example.com/rexburg-community-events.jpg" loading="lazy" alt="Community Events">
+                <img class="discover-img" src="images/Community-Events.webp" loading="lazy" alt="Community Events">
                 <figcaption>Engaging Community Events in Rexburg</figcaption>
             </div>
         </gallery>
