--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="My profile">
+    <meta property="og:type" content="website">
+    <meta property="og:image"
+        content="https://github.com/Dev-Karatapu/wdd230/blob/main/images/profile-image.webp">
+    <meta property="og:url" content="https://dev-karatapu.github.io/wdd230/index.html">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Karatapu - WDD 230 - Web Frontend Development</title>
@@ -10,7 +15,12 @@
 </head>
 <body>
     <header>
-        <img src="images/profile-image.jpg" alt="Dev Karatapu">
+        <picture>
+            <source media="(max-width: 400px)" srcset="images/profile-image.webp">
+            <source media="(min-width: 401px) and (max-width: 960px)" srcset="images/profile-image.webp">
+            <img src="images/profile-image.webp" alt="Dev Karatapu">
+        </picture>
+        
         <h1>Dev Karatapu</h1>
     </header>
        <a id="menu" href="#" title="Home" class="active">Home</a>
@@ -31,18 +41,20 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>Lesson 01: <a href="lesson01/holygrail.html">Holy Grail</a></li>
-                <li>Lesson 02: <a href="lesson02/design-principles.html">Design Principles</a></li>
-                <li>Lesson 03: <a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
-                <li>Lesson 04: <a href="lesson04/">?</a></li>
-                <li>Lesson 05: <a href="lesson05/bom.html">Book of Mormon Favorite Scripture</a></li>
-                <li>Lesson 06: <a href="lesson06/design-principles.html">Design Principles</a></li>
-                <li>Lesson 07: <a href="lesson07/design-principles.html">Design Principles</a></li>
-                <li>Lesson 08: <a href="lesson08/design-principles.html">Design Principles</a></li>
-                <li>Lesson 09: <a href="lesson09/design-principles.html">Design Principles</a></li>
-                <li>Lesson 10: <a href="lesson010/design-principles.html">Design Principles</a></li>
-                <li>Lesson 11: <a href="lesson011/design-principles.html">Design Principles</a></li>
-                <li>Lesson 11: <a href="lesson02/design-principles.html">Design Principles</a></li>              
+                <li>Lesson 01: <a href="/index.html">My Course Home Page</a></li>
+                <li>Lesson 02: <a href="/index.html">Course Home Enhancement</a> | <a href="lesson02/design-principles.html">Design Principles</a></li>
+                <li>Lesson 03: <a href="/index.html">Course Home Enhancement</a> |<a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
+                <li>Lesson 04: <a href="chamber/index.html">Chamber Home</a></li>
+                <li>Lesson 05: <a href="lesson05/bom.html">Book of Mormon App</a> | <a href="chamber/index.html">Chamber Home Continued</a></li>
+                <li>Lesson 06: <a href="/index.html">Course Home Enhancement</a> | <a href="/index.html">Course Home Continued</a></li>
+                <li>Lesson 07: <a href="/index.html">Course Home Enhancement</a> |<a href="chamber/discover.html">Chamber Discover</a></li>
+                <li>Lesson 08: <a href="lesson08/form.html"> | <a href="chamber/join.html">Chamber Join</a></li>
+                <li>Lesson 09: <a href="/index.html">Course Home Enhancement</a> | <a href="chamber/directory.html">Chamber Directory</a></li>
+                <li>Lesson 10: <a href="/index.html">Course Home Enhancement</a> | <a href="chamber/index.html">Chamber Home Enchancement</a></li>
+                <li>Lesson 11: <a href="chamber/index.html">Chamber Project Submission</a></li>
+                <li>Lesson 12: <a>Final Exam Preparation and Individual Website Project</a></li>
+                <li>Lesson 13: <a>Take the Final Exam | Final Project Work</a></li> 
+                <li>Lesson 14: <a href="scoots/index.html">Final Project - Scoots</a>               
             </ul>
         </section>
 
