--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li>Lesson 11: <a href="chamber/index.html">Chamber Project Submission</a></li>
                 <li>Lesson 12: <a>Final Exam Preparation and Individual Website Project</a></li>
                 <li>Lesson 13: <a>Take the Final Exam | Final Project Work</a></li> 
-                <li>Lesson 14: <a href="scoots/index.html">Final Project - Scoots</a>               
+                <li>Lesson 14: <a href="scoots/index.html">Final Project - Scoots!</a>               
             </ul>
         </section>
 
